--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: logbuildR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Helps the user to correctly create process data.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Authors@R: c(person("Gert","Janssenswillen", email = "gert.janssenswillen@uhasselt.be", role = c("aut","cre")),
+             person("Niels","Martin",email = "niels.martin@uhasselt.be", role = c("ctb")),
+             person("Greg","Van Houdt",email = "greg.vanhoudt@uhasselt.be", role = c("ctb")))
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Imports: bupaR, dplyr, lubridate, magrittr, miniUI, purrr, shiny, stringr, glue, rstudioapi
