--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ import(bupaR)
 import(dplyr)
 import(miniUI)
 import(shiny)
+import(stringr)
 importFrom(bupaR,activitylog)
 importFrom(bupaR,convert_timestamps)
 importFrom(lubridate,dmy)
