--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(assign_instance_id)
 export(build_log)
+export(build_log2)
 export(check_lifecycle_activities)
 export(check_lifecycle_events)
 export(check_timestamps)
@@ -50,5 +51,5 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,accumulate)
 importFrom(purrr,map)
 importFrom(purrr,map_dbl)
+importFrom(rlang,inherits_any)
 importFrom(stringr,str_c)
-importFrom(stringr,str_detect)
