--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,8 @@ export(recode_lifecycles_activities)
 export(recode_lifecycles_events)
 export(save_log)
 export(select_activity_instance)
-export(select_ids)
 export(select_lifecycle)
+export(select_log_identifiers)
 export(select_timestamps)
 export(ymd)
 export(ymd_h)
